--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "mitt": "^3.0.1",
+    "pdfjs-dist": "^3.10.111",
     "vue": "^3.3.4",
     "vue-i18n": "^9.4.1"
   },
